# qt4rust

./: .gitignore  .qmlls.ini  Cargo.toml  Makefile  README.md  build.rs  check_storage_issue.sh  rust-toolchain.toml
.cargo/: config.toml
config/: alarm_config.toml  alarm_thresholds.toml  alarm_thresholds.toml.example  logging.toml  logging.toml.example  modbus_sensors.toml  modbus_sensors.toml.examples  pipeline_config.toml  pipeline_config.toml.bak  pipeline_config.toml.example  rated_load_table.csv  rated_load_table.csv.example  sensor_calibration.toml  sensor_calibration.toml.example
crates/config-hot-reload/: Cargo.toml  README.md
crates/config-hot-reload/examples/: basic_usage.rs  test_parser.rs
crates/config-hot-reload/src/: error.rs  lib.rs  subscribers.rs  types.rs
crates/config-hot-reload/src/manager/: config_cache.rs  config_manager.rs  mod.rs
crates/config-hot-reload/src/parser/: README.md  csv_parser.rs  mod.rs  toml_parser.rs
crates/config-hot-reload/src/subscriber/: mod.rs  trait_def.rs
crates/config-hot-reload/src/validator/: mod.rs  validators.rs
crates/config-hot-reload/src/watcher/: file_watcher.rs  mod.rs
crates/crane-data-layer/: Cargo.toml  README.md
crates/cxx-qt-mvi-core/: Cargo.toml  README.md
crates/modbus-tcp/: Cargo.toml
crates/modbus-tcp/src/: client.rs  config.rs  data_source.rs  error.rs  lib.rs
crates/qt-app/: Cargo.toml  README.md  build.rs
crates/qt-app/src/: alarm_threshold_viewmodel.rs  angle_calibration_viewmodel.rs  application.rs  calibration_viewmodel.rs  data_collection_controller.rs  history_viewmodel.rs  load_calibration_viewmodel.rs  main.rs  moment_curve_viewmodel.rs  monitoring_viewmodel.rs  radius_calibration_viewmodel.rs  translation_bridge.rs  viewmodel_manager.rs
crates/qt-app/src/i18n/: fluent_backend.rs  locale_manager.rs  mod.rs  traits.rs
crates/qt-app/src/intents/: calibration_intent.rs
crates/qt-app/src/reducers/: calibration_reducer.rs
crates/qt-app/src/settings_viewmodel/: README.md  mod.rs  settings_main.rs
crates/qt-app/src/settings_viewmodel/calibration/: alarm_threshold.rs  angle_calibration.rs  load_calibration.rs  mod.rs  radius_calibration.rs
crates/qt-app/src/states/: calibration_state.rs
crates/qt-threading-utils/: Cargo.toml  README.md
crates/qt-threading-utils/examples/: basic_usage.rs  blocking_usage.rs  collection_pipeline.rs  sensor_collector.rs
crates/qt-threading-utils/src/: collector.rs  lib.rs  runtime.rs  timer.rs
crates/sensor-core/: Cargo.toml  README.md
crates/sensor-core/examples/: test_sensor_collection.rs  test_sensor_storage.rs
crates/sensor-core/src/: error.rs  lib.rs  traits.rs
crates/sensor-core/src/algorithms/: ad_converter.rs
crates/sensor-core/src/calibration/: mod.rs  sensor_calibration.rs
crates/sensor-core/src/config/: mod.rs  sensor_config.rs
crates/sensor-core/src/data/: sensor_data.rs
crates/sensor-core/src/pipeline/: aggregator.rs  config.rs  data_source.rs  manager.rs  mod.rs  sensor_pipeline.rs  storage.rs
crates/sensor-core/src/sensors/: angle.rs  base.rs  load.rs  mod.rs  radius.rs
crates/sensor-core/src/source/: analog_simulator.rs  combined.rs  digital.rs  digital_simulator.rs  factory.rs  mod.rs  registry.rs
crates/sensor-core/src/storage/: mod.rs  repository.rs  schema.rs
crates/sensor-core/tests/: pipeline_integration_tests.rs
crates/sensor-simulator/: Cargo.toml  README.md
crates/sensor-simulator/examples/: unified_sensor.rs
crates/sensor-simulator/src/: config.rs  data_source.rs  error.rs  lib.rs  modbus_tcp.rs  real.rs  simulated.rs  simulator.rs  traits.rs
crates/sensor-traits/: Cargo.toml
crates/sensor-traits/src/: lib.rs
doc/: CALIBRATION_DATA_FLOW.md  CALIBRATION_SUMMARY.md  CRANE_DATA_LAYER_DESIGN.md  CROSS_COMPILE_SUCCESS.md  DATA_COLLECTION_INTEGRATION.md  DATA_PROCESSING_TO_DATABASE_FLOW.md  DEPLOY_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_SCHEMA_CONSISTENCY.md  KEYBOARD_DEMOS_SUMMARY.md  LOGGING_GUIDE.md  MODBUS_TCP_SETUP_GUIDE.md  PIPELINE_ACTIVATION.md  PIPELINE_CONFIG_GUIDE.md  PIPELINE_DATA_STRUCTURES.md  PIPELINE_INTEGRATION_GUIDE.md  PLUGIN_FIX.md  QT_KEYBOARD_DEMO.md  QT_KEYBOARD_DEVICE_GUIDE.md  SENSORDATA_SCHEMA_DESIGN.md  SETUP_STATUS.md  SPLASH_SCREEN.md  STATES_LAYER_IMPLEMENTATION.md  STORAGE_DECOUPLING_DESIGN.md  STORAGE_INTEGRATION_COMPLETE.md  STORAGE_PIPELINE_DESIGN.md  STORAGE_PIPELINE_LOGIC.md  STORAGE_PIPELINE_SUMMARY.md  TEST_MAX_RECORDS.md  THREAD_RUNTIME_DIAGRAM.md  THREE_BACKEND_PIPELINE_ARCHITECTURE.md  TOKIO_MIGRATION_PLAN.md  TWO_STORAGE_PIPELINES.md  WORKSPACE_SETUP.md  history-data-interface-design.md
doc/plans/: 2026-04-19-history-data-interface.md
docs/: arm64-support.md
examples/: check_db_records.sh  diagnose_storage_stuck.rs  full_pipeline_demo.rs  logging_demo.rs  logging_with_config_file.rs  test_config.rs  test_config_simple.rs  test_danger_state_switching.rs  test_full_danger_pipeline.rs  test_max_records.rs  test_multi_rate_pipeline.rs  test_pipeline_logging.rs  test_simulator_toggle.rs  test_storage_interval.rs
fonts/: fonts.conf
migrations/: 001_add_switch_columns.sql
qml/: DataCollectionManager.qml  README.md  main.preview.qml  main.qml  qmldir
scripts/: S01qt-rust-demo  add_locale_version.py  check-alarm.sh  check-framebuffer.sh  collect-fonts.sh  collect-libs.sh  convert-svg-to-png.py  deploy-to-device.sh  device-config.sh  diagnose-device.sh  download-figma-assets.sh  fix_all_translations.py  fix_complex_translations.py  fix_property_translations.py  fix_remaining_translations.py  fix_settings_view.py  fix_settings_view_v2.py  fix_simple_translations.py  fix_title_translations.py  fix_translations.py  install-arm-qt6.sh  install-autostart.sh  preview_qml.py  push-plugins.sh  run-example-on-device.sh  run-on-device.sh  setup-device-time.sh  switch_to_modbus.sh  switch_to_simulator.sh  test-alarm-db.sh  test.sh
src/: application.rs  counter.rs  lib.rs  main.rs  monitoring_viewmodel.rs  viewmodel_manager.rs
tests/: .gitkeep  pipeline_test.rs  schema_verification.rs  states_test.rs  test_config_load.rs
(+163 files in other folders)
