[workspace]
members = [
    ".",
    "crates/cxx-qt-mvi-core",
    "crates/sensor-simulator",
    "crates/qt-threading-utils",
    "crates/crane-data-layer",
    "crates/qt-app",
]
resolver = "2"

[workspace.dependencies]
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = "0.8"
tokio = { version = "1.42", features = ["full"] }
sensor-simulator = { path = "crates/sensor-simulator" }

[package]
name = "qt-rust-demo"
version = "0.1.0"
edition = "2021"
authors = ["Qt Rust Demo Team"]
description = "A demonstration application integrating Rust with Qt 6.x using cxx-qt for ARM32 Linux"



[dependencies]
sensor-simulator = { path = "crates/sensor-simulator" }
qt-threading-utils = { path = "crates/qt-threading-utils" }
crane-data-layer = { path = "crates/crane-data-layer" }

tokio = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
csv = "1.3"
chrono = "0.4"
tracing = "0.1"

# 存储管道依赖
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }

[build-dependencies]
# lib 不需要 cxx-qt-build

[lib]
name = "qt_rust_demo"
path = "src/lib.rs"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# 开发模式配置（加速编译）
[profile.dev]
opt-level = 0
debug = true
incremental = true

# 依赖包在开发模式下使用基本优化
[profile.dev.package."*"]
opt-level = 1
debug = false

[[example]]
name = "full_pipeline_demo"
path = "examples/full_pipeline_demo.rs"

[[example]]
name = "test_storage_interval"
path = "examples/test_storage_interval.rs"
