[package]
name = "config-hot-reload"
version = "0.1.0"
edition = "2021"
authors = ["Qt Rust Demo Team"]
description = "Configuration hot reload system for crane data display application"

[dependencies]
# 依赖主项目以访问配置类型定义
qt-rust-demo = { path = "../.." }
sensor-core = { path = "../sensor-core" }

notify = "6.1"
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
toml = "0.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
tracing-test = "0.2"
tokio-test = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[lib]
name = "config_hot_reload"
path = "src/lib.rs"
