[package]
name = "qt-app"
version = "0.1.0"
edition = "2021"
authors = ["Qt Rust Demo Team"]
description = "Qt GUI application for crane monitoring system"

[dependencies]
qt-rust-demo = { path = "../.." }
sensor-core = { path = "../sensor-core" }
qt-threading-utils = { path = "../qt-threading-utils" }
config-hot-reload = { path = "../config-hot-reload" }

# Qt 依赖
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["full"] }

# 日志依赖
tracing = "0.1"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }

[[bin]]
name = "qt-rust-demo"
path = "src/main.rs"
