[package]
name = "qt-threading-utils"
version = "0.1.0"
edition = "2021"
authors = ["Qt Rust Demo Team"]
description = "Threading and timer utilities for Qt applications"
license = "MIT"

[dependencies]
tokio = { workspace = true }
futures = "0.3"

[dev-dependencies]
sensor-simulator = { workspace = true }

[[example]]
name = "sensor_collector"
path = "examples/sensor_collector.rs"
