[package]
name = "sensor-core"
version = "0.1.0"
edition = "2021"
authors = ["Qt Rust Demo Team"]
description = "Core sensor abstraction layer with data models, calibration, and transport"
license = "MIT"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "time", "rt", "rt-multi-thread", "macros", "test-util"] }
qt-threading-utils = { path = "../qt-threading-utils" }
tracing = "0.1"
rand = "0.8"
toml = "0.8"
sensor-traits = { path = "../sensor-traits" }
modbus-tcp = { path = "../modbus-tcp" }

[dev-dependencies]
tempfile = "3"
